想读，在读，读完界面设计完成（修复bug，给Spinner加上了内容）

--- a/app/src/main/res/layout/activity_reading.xml
+++ b/app/src/main/res/layout/activity_reading.xml
@@ -1,184 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ddd"
     android:orientation="vertical"
-    android:gravity="center_horizontal"
-    tools:context="cn.a1949science.www.bookrecord.activity.ReadingActivity">
+    android:gravity="center_horizontal">
 
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@android:color/white">
-        <Button
-            android:id="@+id/reading_return_button"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:background="@mipmap/returnbutton"/>
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/verticalline" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="已读记录"
-            android:textSize="20dp"
-            android:textColor="@android:color/black"/>
-    </android.support.v7.widget.Toolbar>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="vertical"
-        android:background="#fff"
-        android:gravity="center_horizontal"
-        >
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:textSize="20dp"
-        android:text="评分"
-        android:gravity="center_horizontal"
-        android:textColor="@android:color/black"/>
-        <RatingBar
-            android:id="@+id/reading_bookRating"
-            style="@style/foodRatingBar"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="10dp"
-            android:layout_height="35dp"
-            android:isIndicator="true"
-            android:numStars="5"
-            android:rating="3" />
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@android:color/white">
+            <Button
+                android:id="@+id/reading_return_button"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:background="@mipmap/returnbutton"/>
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/verticalline" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="已读记录"
+                android:textSize="20dp"
+                android:textColor="@android:color/black"/>
+        </android.support.v7.widget.Toolbar>
         <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-            android:layout_marginTop="10dp">
-        <TextView
-            android:layout_width="80dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="笔记："
-            android:textSize="16dp"
-            android:textColor="@android:color/background_dark"
-            android:gravity="right|center_vertical"
-            />
-        <com.sendtion.xrichtext.RichTextEditor
-            android:id="@+id/reading_note"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:textSize="16dp"
-            android:textColor="@android:color/darker_gray"/>
-     </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:orientation="vertical"
+            android:background="#fff"
+            android:gravity="center_horizontal"
             >
             <TextView
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:text="原因："
-                android:textSize="16dp"
-                android:textColor="@android:color/background_dark"
-                android:gravity="right|center_vertical"
-                />
-            <com.sendtion.xrichtext.RichTextEditor
-                android:id="@+id/reading_reason"
-                android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:textSize="16dp"
-                android:textColor="@android:color/darker_gray"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp">
-        <TextView
-            android:layout_width="80dp"
-            android:layout_height="40dp"
-            android:text="方式："
-            android:textSize="16dp"
-            android:textColor="@android:color/background_dark"
-            android:gravity="right|center_vertical"
-            />
-
-            <Spinner
-                android:id="@+id/reading_way"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="50dp"
-                ></Spinner>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp">
-            <TextView
-
-                android:layout_width="80dp"
-                android:layout_height="40dp"
-                android:text="位置："
-                android:textSize="16dp"
-                android:textColor="@android:color/background_dark"
-                android:gravity="right|center_vertical"
-                />
-
-            <TextView
-                android:id="@+id/reading_adress_textview"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical|center_horizontal"
-                android:hint="选择读书地点"
-                />
-            <Button
-                android:id="@+id/reading_adress_button"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:textSize="20dp"
+                android:text="评分"
+                android:gravity="center_horizontal"
+                android:textColor="@android:color/black"/>
+            <RatingBar
+                android:id="@+id/reading_bookRating"
+                style="@style/foodRatingBar"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="20dp"
                 android:layout_marginLeft="10dp"
-                android:background="@mipmap/adress"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp">
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="40dp"
-                android:text="分类："
-                android:textSize="16dp"
-                android:textColor="@android:color/background_dark"
-                android:gravity="right|center_vertical"
-                />
+                android:layout_height="35dp"
+                android:isIndicator="true"
+                android:numStars="5"
+                android:rating="3" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:text="笔记："
+                    android:textSize="16dp"
+                    android:textColor="@android:color/background_dark"
+                    android:gravity="right|center_vertical"
+                    />
+                <com.sendtion.xrichtext.RichTextEditor
+                    android:id="@+id/reading_note"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:textSize="16dp"
+                    android:textColor="@android:color/darker_gray"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp"
+                >
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="match_parent"
+                    android:text="原因："
+                    android:textSize="16dp"
+                    android:textColor="@android:color/background_dark"
+                    android:gravity="right|center_vertical"
+                    />
+                <com.sendtion.xrichtext.RichTextEditor
+                    android:id="@+id/reading_reason"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:textSize="16dp"
+                    android:textColor="@android:color/darker_gray"/>
+            </LinearLayout>
 
-            <Spinner
-                android:id="@+id/reading_classfy"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="50dp"></Spinner>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="40dp"
+                    android:text="方式："
+                    android:textSize="16dp"
+                    android:textColor="@android:color/background_dark"
+                    android:gravity="right|center_vertical"
+                    />
+
+                <Spinner
+                    android:id="@+id/reading_way"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="50dp"
+                    android:entries="@array/readway"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp">
+                <TextView
+
+                    android:layout_width="80dp"
+                    android:layout_height="40dp"
+                    android:text="位置："
+                    android:textSize="16dp"
+                    android:textColor="@android:color/background_dark"
+                    android:gravity="right|center_vertical"
+                    />
+
+                <TextView
+                    android:id="@+id/reading_adress_textview"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:hint="选择读书地点"
+                    />
+                <Button
+                    android:id="@+id/reading_adress_button"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@mipmap/adress"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="5dp">
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="40dp"
+                    android:text="分类："
+                    android:textSize="16dp"
+                    android:textColor="@android:color/background_dark"
+                    android:gravity="right|center_vertical"
+                    />
+
+                <Spinner
+                    android:id="@+id/reading_classfy"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="50dp"
+                    android:entries="@array/readclassfy"
+                  />
+            </LinearLayout>
+            <Button
+                android:id="@+id/reading_button"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_height="50dp"
+                android:background="#3ccf1b"
+                android:text="完成记录"
+                android:textSize="16dp"
+                android:textColor="#fff"/>
         </LinearLayout>
-        <Button
-            android:id="@+id/reading_button"
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_height="50dp"
-            android:background="#3ccf1b"
-            android:text="完成记录"
-            android:textSize="16dp"
-            android:textColor="#fff"/>
     </LinearLayout>
-</LinearLayout>
