--- a/app/src/main/res/layout/activity_seen.xml
+++ b/app/src/main/res/layout/activity_seen.xml
@@ -8,7 +8,6 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     tools:context="cn.a1949science.www.bookrecord.activity.SeenActivity">
-
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -97,6 +96,7 @@
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="50dp"
+                android:entries="@array/seen_date"
                 >
             </Spinner>
         </LinearLayout>
@@ -119,6 +119,7 @@
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="50dp"
+                android:entries="@array/readway"
                 >
             </Spinner>
         </LinearLayout>
@@ -168,7 +169,8 @@
                 android:id="@+id/seen_classfy"
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="50dp">
+                android:layout_marginLeft="50dp"
+                android:entries="@array/readclassfy">
             </Spinner>
         </LinearLayout>
         <Button
