--- a/app/src/main/res/layout/want_to_read_item.xml
+++ b/app/src/main/res/layout/want_to_read_item.xml
@@ -98,7 +98,7 @@
                     android:id="@+id/public_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
+                    android:layout_gravity="top"
                     android:textColor="@color/text_gray"
                     android:textSize="15sp"
                     android:layout_weight="1"/>
