--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -9,42 +9,33 @@
     android:background="#eee"
     tools:context="cn.a1949science.www.bookrecord.activity.BookInfoActivity">
 >
-    <RelativeLayout
-        android:id="@+id/book_info_actionbar"
+    <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#fff">
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/white">
         <Button
             android:id="@+id/book_info_return"
-            android:layout_width="25dp"
+            android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_marginLeft="5dp"
-            android:layout_centerVertical="true"
             android:background="@mipmap/returnbutton" />
         <ImageView
             android:id="@+id/book_info_vertivalline"
             android:layout_width="20dp"
             android:layout_height="25dp"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/book_info_return"
             android:background="@mipmap/verticalline"/>
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:layout_marginLeft="10dp"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/book_info_vertivalline"
+            android:textSize="20dp"
+            android:textColor="@android:color/black"
             android:text="@string/bookName"/>
         <Button
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="12dp"
-            android:layout_centerVertical="true"
+            android:layout_marginLeft="180dp"
             android:background="@mipmap/scan" />
-    </RelativeLayout>
+    </android.support.v7.widget.Toolbar>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
