--- a/app/src/main/res/layout/fragment_seen.xml
+++ b/app/src/main/res/layout/fragment_seen.xml
@@ -2,16 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.a1949science.www.bookrecord.fragment.WantFragment">
+    tools:context="cn.a1949science.www.bookrecord.fragment.SeenFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/refresh_want"
+        android:id="@+id/refresh_seen"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view"
+            android:id="@+id/recycler_seen"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
