--- a/app/src/main/res/layout/seen_item.xml
+++ b/app/src/main/res/layout/seen_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
     app:cardCornerRadius="4dp">
@@ -12,66 +12,78 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/seen_item"
-            android:layout_width="120dp"
-            android:layout_height="150dp"
-            android:scaleType="centerCrop" />
+            android:id="@+id/book_image"
+            android:layout_width="100dp"
+            android:layout_height="140dp"
+            android:layout_margin="10dp"
+            android:scaleType="fitCenter"
+            android:contentDescription="@string/bookimage" />
 
         <LinearLayout
             android:orientation="vertical"
+            android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
+                android:layout_marginBottom="3dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/book_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="clip_horizontal"
                     android:textColor="@color/black"
-                    android:textSize="25sp"/>
+                    android:textSize="20sp"
+                    android:layout_weight="1"/>
 
                 <TextView
                     android:id="@+id/public_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="clip_horizontal"
+                    android:layout_gravity="center_vertical"
                     android:textColor="@color/text_gray"
-                    android:textSize="15sp"/>
+                    android:textSize="12sp"
+                    android:layout_marginEnd="20dp"/>
 
             </LinearLayout>
 
             <LinearLayout
+                android:layout_marginBottom="3dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <com.willy.ratingbar.ScaleRatingBar
+                    android:layout_weight="3"
                     android:id="@+id/simpleRatingBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srb_starWidth="15dp"
-                    app:srb_starHeight="15dp"
-                    app:srb_starPadding="5dp"
+                    app:srb_starWidth="18dp"
+                    app:srb_starHeight="18dp"
+                    app:srb_starPadding="2dp"
                     app:srb_numStars="5"
-                    app:srb_stepSize="0.5"
-                    app:srb_rating="5"
+                    app:srb_stepSize="0.1"
+                    app:srb_rating="2"
                     app:srb_isIndicator="true"
+                    app:srb_clickable="true"
+                    app:srb_scrollable="true"
+                    app:srb_clearRatingEnabled="true"
                     app:srb_drawableEmpty="@mipmap/ministar_empty"
                     app:srb_drawableFilled="@mipmap/ministar_full">
                 </com.willy.ratingbar.ScaleRatingBar>
 
                 <TextView
+                    android:layout_weight="3"
                     android:id="@+id/rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="clip_horizontal"
+                    android:layout_gravity="center_vertical"
                     android:textColor="@color/text_gray"
-                    android:textSize="16sp"/>
+                    android:textSize="12sp"/>
             </LinearLayout>
 
 
@@ -81,18 +93,19 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="clip_horizontal"
                 android:textColor="@color/text_gray"
-                android:textSize="20sp"/>
+                android:textSize="16sp"/>
 
             <TextView
                 android:id="@+id/public_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="clip_horizontal"
+                android:layout_gravity="top"
                 android:textColor="@color/text_gray"
-                android:textSize="20sp"/>
+                android:textSize="16sp" />
+
+
 
         </LinearLayout>
-
 
     </LinearLayout>
 
