--- a/app/src/main/res/layout/activity_seen.xml
+++ b/app/src/main/res/layout/activity_seen.xml
@@ -28,14 +28,17 @@
             android:textSize="20dp"
             android:textColor="@android:color/black"/>
     </android.support.v7.widget.Toolbar>
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:background="#fff">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="#fff"
         android:gravity="center_horizontal"
         >
         <TextView
@@ -185,4 +188,5 @@
             android:textSize="16dp"
             android:textColor="#fff"/>
     </LinearLayout>
+    </ScrollView>
 </LinearLayout>
