--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,6 +66,7 @@
                 android:id="@+id/phoneNumberDelete"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
+                android:layout_marginEnd="5dp"
                 android:layout_centerVertical="true"
                 android:background="@mipmap/delete"
                 android:layout_alignParentEnd="true"/>
