--- a/app/src/main/res/layout/activity_want_read.xml
+++ b/app/src/main/res/layout/activity_want_read.xml
@@ -50,16 +50,24 @@
             android:text="豆瓣评分"
             android:gravity="center_horizontal"
             android:textColor="@android:color/black"/>
-        <RatingBar
-            android:id="@+id/want_read_bookRating"
-            style="@style/foodRatingBar"
+        <com.willy.ratingbar.ScaleRatingBar
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/bookRating"
             android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="10dp"
-            android:layout_height="35dp"
-            android:isIndicator="true"
-            android:numStars="5"
-            android:rating="3" />
+            android:layout_height="wrap_content"
+            app:srb_starWidth="50dp"
+            app:srb_starHeight="50dp"
+            app:srb_starPadding="0dp"
+            app:srb_numStars="5"
+            app:srb_stepSize="0.1"
+            app:srb_rating="0"
+            app:srb_isIndicator="true"
+            app:srb_clickable="true"
+            app:srb_scrollable="true"
+            app:srb_clearRatingEnabled="true"
+            app:srb_drawableEmpty="@mipmap/star_empty"
+            app:srb_drawableFilled="@mipmap/star_full">
+        </com.willy.ratingbar.ScaleRatingBar>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
