--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -31,6 +31,7 @@
             android:textColor="@android:color/black"
             android:text="@string/bookName"/>
         <Button
+            android:id="@+id/book_info_scan"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginLeft="180dp"
