--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -11,7 +11,7 @@
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
         android:background="@android:color/white">
         <Button
             android:id="@+id/book_info_return"
@@ -22,7 +22,8 @@
             android:id="@+id/book_info_vertivalline"
             android:layout_width="20dp"
             android:layout_height="25dp"
-            android:background="@mipmap/verticalline"/>
+            android:background="@mipmap/verticalline"
+            android:contentDescription="@string/split" />
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
@@ -145,26 +146,28 @@
             android:layout_margin="10dp"
             android:scaleType="fitCenter"
             android:contentDescription="@string/bookimage" />
-    </LinearLayout>
-        <RelativeLayout
+        </LinearLayout>
+
+            <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            >
+            android:layout_marginTop="30dp">
+
             <Button
                 android:id="@+id/book_info_wantRead"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:text="想读"
+                android:layout_marginStart="20dp"
+                android:text="@string/want_to_read"
                 android:background="@drawable/book_info_bg_border"
                 android:textColor="@color/orange"/>
+
             <Button
                 android:id="@+id/book_info_reading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:text="在读"
+                android:text="@string/reading"
                 android:background="@drawable/book_info_bg_border"
                 android:textColor="#ff6702"
                 />
@@ -173,25 +176,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_marginRight="20dp"
-                android:text="读过"
+                android:layout_marginEnd="20dp"
+                android:text="@string/seen"
                 android:background="@drawable/book_info_bg_border"
                 android:textColor="#ff6702"
-                />
+                tools:ignore="RelativeOverlap" />
         </RelativeLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="内容简介"
+            android:text="@string/book_summary"
+            android:textSize="18sp"
             android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginStart="20dp"/>
         <TextView
             android:id="@+id/book_summary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"/>
+            android:layout_margin="20dp"/>
         </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
@@ -209,13 +211,14 @@
             android:layout_marginRight="10dp"
             android:background="#fff"
             android:orientation="vertical">
+
             <cn.a1949science.www.bookrecord.widget.MyListView
                 android:id="@+id/book_info_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:divider="#eee"
-                android:dividerHeight="10px"
-                />
+                android:dividerHeight="10dp" />
+
         </LinearLayout>
     </LinearLayout>
     </ScrollView>
