--- a/app/src/main/res/layout/activity_advice.xml
+++ b/app/src/main/res/layout/activity_advice.xml
@@ -7,7 +7,7 @@
     android:background="#eee">
 <android.support.v7.widget.Toolbar
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
+    android:layout_height="wrap_content"
     android:background="@android:color/white">
     <Button
         android:id="@+id/advice_return_button"
