--- a/app/src/main/res/layout/book_info_list.xml
+++ b/app/src/main/res/layout/book_info_list.xml
@@ -1,42 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_margin="5dp"
+    app:cardCornerRadius="4dp">
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp">
+        android:layout_height="100dp">
 
         <cn.a1949science.www.bookrecord.widget.CircleImageView
-            android:id="@+id/book_info_headicon"
+            android:id="@+id/headicon"
             android:layout_marginStart="10dp"
-            android:layout_centerVertical="true"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            app:civ_border_width="2dp"
-            app:civ_border_color="#ccc" />
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:civ_border_width="2dp" />
 
         <TextView
             android:id="@+id/book_info_usernick"
-            android:layout_width="60dp"
+            android:layout_width="0dp"
             android:layout_height="20dp"
-            android:layout_centerVertical="true"
             android:textSize="15sp"
-            android:layout_toEndOf="@+id/book_info_headicon"
-            android:layout_marginStart="10dp" />
+            android:layout_marginStart="10dp"
+            android:layout_weight="1"/>
 
         <com.willy.ratingbar.ScaleRatingBar
             android:layout_gravity="center_horizontal"
             android:id="@+id/book_info_rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
+            android:layout_marginEnd="10dp"
             app:srb_starWidth="20dp"
             app:srb_starHeight="20dp"
             app:srb_starPadding="0dp"
@@ -50,7 +47,7 @@
             app:srb_drawableEmpty="@mipmap/star_empty"
             app:srb_drawableFilled="@mipmap/star_full">
         </com.willy.ratingbar.ScaleRatingBar>
-    </RelativeLayout>
+    </LinearLayout>
     <TextView
         android:id="@+id/book_info_usercomment"
         android:layout_width="match_parent"
@@ -63,6 +60,5 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-      />
-</LinearLayout>
+        android:layout_marginRight="20dp"/>
+</android.support.v7.widget.CardView>
